tests/ui/consts/const-eval/const_panic_libcore_bin.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_libcore_bin.rs:8:15
   |
LL | const Z: () = panic!("cheese");
   |               ^^^^^^^^^^^^^^^^ evaluation panicked: cheese

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_libcore_bin.rs:11:15
   |
LL | const Y: () = unreachable!();
   |               ^^^^^^^^^^^^^^ evaluation panicked: internal error: entered unreachable code

error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_libcore_bin.rs:14:15
   |
LL | const X: () = unimplemented!();
   |               ^^^^^^^^^^^^^^^^ evaluation panicked: not implemented
   |
   = note: this error originates in the macro `unimplemented` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
